--- a/task02/组件中的组件.html
+++ b/task02/组件中的组件.html
@@ -4,62 +4,16 @@
     <meta charset="UTF-8">
     <title>组件中的组件</title>
     <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.css">
-    <style>
-        .wrap{
-            font-size: 0;
-            background-color: #cdcdcd;
-            border-radius: 20px;
-            width: 400px;
-            padding: 5px;
-        }
-        .content{
-            font-size: 14px;
-        }
-        .keyWord{
-            box-sizing: border-box;
-            width: 80%;
-            height: 30px;
-            border-radius: 15px;
-            outline: none;
-            padding: 3px 10px;
-            border: none;
-        }
-        .search{
-            box-sizing: border-box;
-            width: 18%;
-            float: right;
-            height: 30px;
-            border-radius: 15px;
-            outline: none;
-            background-color: #ff7f2e;
-            border: none;
-            color:#fff;
-        }
-        .list{
-            list-style: none;
-            padding-left: 10px;
-            padding-right: 10px;
-            margin: 0;
-            margin-top: 15px;
-            margin-bottom: 10px;
-        }
-        .list li{
-            cursor: pointer;
-            padding: 5px;
-        }
-        .list li:hover{
-            background-color: #ffa5c8;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="../lib/vue/vue.js"></script>
 </head>
 <body>
 <div id="app">
-    <h2>全局注册</h2>
-    <custom-select1 btn-value="查询"></custom-select1>
-    <h2>局部注册</h2>
-    <custom-select2 btn-value="搜索"></custom-select2>
+    <h2>下拉组件</h2>
+    <custom-select1 btn-value="查询" :list="list1"></custom-select1>
+    <h2>下拉组件</h2>
+    <custom-select2 btn-value="搜索" :list="list2"></custom-select2>
 </div>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="app2.js"></script>
 </body>
 </html>
