--- a/demo03/组件中的组件.html
+++ b/demo03/组件中的组件.html
@@ -14,6 +14,6 @@
     <h2>下拉组件</h2>
     <custom-select2 btn-value="搜索" :list="list2"></custom-select2>
 </div>
-<script type="text/javascript" src="app2.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
